--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <section class="form-wrapper hidden">
         <form class="contact-form">
           <h1>Add Contact</h1>
-          <span class="fas fa-times"></span>
+          <span class="fas fa-times cancel"></span>
           <div class="form-group">
             <label>Firstname</label>
             <input type="text" class="form-control" name="firstname" required>
