--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
       <!-- contact box -->
       <section class="contacts">
         <ul class="contact-details">
-          <!-- <li class="container">
+          <li class="container">
             <div class="contact">
+              <div class="contact-image">
+                <span class="fas fa-user"></span>
+              </div>
               <p>jonathan</p>
               <p>kehinde</p>
             </div>
             <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
-          </li> -->
+          </li>
         </ul>
       </section>
       <section class="hidden">
@@ -76,7 +79,7 @@
       <!-- contact form (add and edit form)  -->
       <section class="form-wrapper hidden">
         <form class="contact-form">
-          <h1>Add Contact</h1>
+          <!-- <h1>Add Contact</h1>
           <span class="fas fa-times cancel"></span>
           <div class="form-group">
             <label>Firstname</label>
@@ -99,7 +102,7 @@
             <p>Must be an 11 digit number</p>
           </div>
           <input type="submit" value="Save" class="btn btn-primary">
-          <button class="btn btn-primary cancel">Cancel</button>
+          <input type="button" value="Cancel" class="btn btn-primary cancel"> -->
         </form>
       </section>
     </main>
