couple of fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="light-theme">
+    <main class="dark-theme">
       <!-- navigation -->
       <nav>
         <h1>MeContacts</h1>
@@ -51,6 +51,8 @@
               </div>
               <p>jonathan</p>
               <p>kehinde</p>
+              <p class="hidden">jonathan@gmail.com</p>
+            <p class="hidden">0814753844</p>
             </div>
             <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
           </li>
@@ -66,13 +68,28 @@
             <img src="images/illustration-hero.svg">
           </div>
           <div class="card-text">
-            <h2>Jonathan Kehinde</h2>
-            <p>jonathan@gmail.com</p>
-            <p>9494949</p>
+            <header>
+              <h2>Jonathan Kehinde</h2>
+            </header>
+            <div class="text-group">
+              <h3>Email</h3>
+              <div class="info">
+                <p>jonathan@email.com</p>
+                <span class="fas fa-mail"></span>
+              </div>
+            </div>
+            <div class="text-group">
+              <h3>Phone</h3>
+              <div class="info">
+                <p>27272727272</p>
+                <span class="fas fa-mail"></span>
+              </div>
+            </div>
           </div>
           <div class="buttons">
-            <span class="btn btn-primary update">Edit</span>
-            <span class="btn btn-primary cancel">Cancel</span>
+            <span class="btn btn-tertiary update">Edit</span>
+            <span class="btn btn-tertiary cancel">Cancel</span>
+            <span class="btn btn-tertiary delete">Delete</span>
           </div> -->
         </div>
       </section>
