--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="dark-theme">
+    <main class="light-theme">
       <!-- navigation -->
       <nav>
         <h1>MeContacts</h1>
@@ -49,10 +49,10 @@
               <div class="contact-image">
                 <span class="fas fa-user"></span>
               </div>
-              <p>jonathan</p>
-              <p>kehinde</p>
+              <p>Jonathan</p>
+              <p>Kehinde</p>
               <p class="hidden">jonathan@gmail.com</p>
-            <p class="hidden">0814753844</p>
+            <p class="hidden">08147753844</p>
             </div>
             <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
           </li>
