--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="light-theme">
+    <main>
       <!-- navigation -->
       <nav>
         <h1>MeContacts</h1>
@@ -52,14 +52,19 @@
               <p>Jonathan</p>
               <p>Kehinde</p>
               <p class="hidden">jonathan@gmail.com</p>
-            <p class="hidden">08147753844</p>
+              <p class="hidden">08147753844</p>
             </div>
             <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
           </li>
         </ul>
       </section>
-      <section class="hidden">
-        <div class="delete-comp"></div>
+      <section class="wrapper hidden">
+        <div class="delete-comp">
+          <!-- <h2>Confirm Deletion</h2>
+          <p>Do you really want to remove <span>jonathan</span> from your contacts?</p>
+          <button class="btn btn-tertiary">Cancel</button>
+          <button class="btn btn-danger">Delete</button> -->
+        </div>
       </section>
       <section>
         <div class="contact-card hidden">
