add filter functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Address Book</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/f157625141.js"
       crossorigin="anonymous"
@@ -44,7 +50,7 @@
       <!-- contact box -->
       <section class="contacts">
         <ul class="contact-details">
-          <li class="container">
+          <!-- <li class="container">
             <div class="contact">
               <div class="contact-image">
                 <span class="fas fa-user"></span>
@@ -55,7 +61,7 @@
               <p class="hidden">08147753844</p>
             </div>
             <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
-          </li>
+          </li> -->
         </ul>
       </section>
       <section class="wrapper hidden">
