--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <form class="search">
           <input
             type="text"
+            name="filterField"
             class="form-control"
             placeholder="filter contacts"
           />
