--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
+    <main class="dark-theme">
       <!-- navigation -->
       <nav>
         <h1>MeContacts</h1>
