--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="light-theme">
+    <main>
       <!-- navigation -->
       <nav>
         <h1>MeContacts</h1>
