--- a/index.html
+++ b/index.html
@@ -50,89 +50,17 @@
       </section>
       <!-- contact box -->
       <section class="contacts">
-        <ul class="contact-details">
-          <!-- <li class="container">
-            <div class="contact">
-              <div class="contact-image">
-                <span class="fas fa-user"></span>
-              </div>
-              <p>Jonathan</p>
-              <p>Kehinde</p>
-              <p class="hidden">jonathan@gmail.com</p>
-              <p class="hidden">08147753844</p>
-            </div>
-            <div class="arrow"><i class="fas fa-long-arrow-alt-right"></i></div>
-          </li> -->
-        </ul>
+        <ul class="contact-details"></ul>
       </section>
       <section class="wrapper hidden">
-        <div class="delete-comp">
-          <!-- <h2>Confirm Deletion</h2>
-          <p>Do you really want to remove <span>jonathan</span> from your contacts?</p>
-          <button class="btn btn-tertiary">Cancel</button>
-          <button class="btn btn-danger">Delete</button> -->
-        </div>
+        <div class="delete-comp"></div>
       </section>
       <section>
-        <div class="contact-card hidden">
-          <!-- <span class="fas fa-times cancel"></span>
-          <div class="card-image">
-            <img src="images/illustration-hero.svg">
-          </div>
-          <div class="card-text">
-            <header>
-              <h2>Jonathan Kehinde</h2>
-            </header>
-            <div class="text-group">
-              <h3>Email</h3>
-              <div class="info">
-                <p>jonathan@email.com</p>
-                <span class="fas fa-mail"></span>
-              </div>
-            </div>
-            <div class="text-group">
-              <h3>Phone</h3>
-              <div class="info">
-                <p>27272727272</p>
-                <span class="fas fa-mail"></span>
-              </div>
-            </div>
-          </div>
-          <div class="buttons">
-            <span class="btn btn-tertiary update">Edit</span>
-            <span class="btn btn-tertiary cancel">Cancel</span>
-            <span class="btn btn-tertiary delete">Delete</span>
-          </div> -->
-        </div>
+        <div class="contact-card hidden"></div>
       </section>
       <!-- contact form (add and edit form)  -->
       <section class="form-wrapper hidden">
-        <form class="contact-form">
-          <!-- <h1>Add Contact</h1>
-          <span class="fas fa-times cancel"></span>
-          <div class="form-group">
-            <label>Firstname</label>
-            <input type="text" class="form-control" name="firstname" required>
-            <p>Must not be more than 10 characters and must be capitalized</p>
-          </div>
-          <div class="form-group">
-            <label>Lastname</label>
-            <input type="text" class="form-control" name="lastname" required>
-            <p>Must not be more than 10 characters and must be capitalized</p>
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" class="form-control" name="email" required>
-            <p>Must be a valid email e.g yourdomain@gmail.com</p>
-          </div>
-          <div class="form-group">
-            <label>Phone</label>
-            <input type="number" class="form-control" name="phone" required>
-            <p>Must be an 11 digit number</p>
-          </div>
-          <input type="submit" value="Save" class="btn btn-primary">
-          <input type="button" value="Cancel" class="btn btn-primary cancel"> -->
-        </form>
+        <form class="contact-form"></form>
       </section>
     </main>
     <script src="app.js"></script>
